# dff-modules

./: CMakeLists.txt  __init__.py
archive/: CMakeLists.txt
archive/decompressor/: CMakeLists.txt  decompressor.cpp  decompressor.hpp  decompressor.i  decompressornode.cpp  decompressornode.hpp
archives/: CMakeLists.txt  __init__.py
archives/zip/: CMakeLists.txt  __init__.py  unzip.py
builtins/: CMakeLists.txt  __init__.py  batch.py  cd.py  fg.py  fileinfo.py  find.py  history.py  info.py  jobs.py  link.py  load.py  ls.py  open.py  show_cwd.py  show_db.py
connector/: CMakeLists.txt  __init__.py
connector/aff/: CMakeLists.txt  aff.cpp  aff.hpp  aff.i  affnode.cpp  affnode.hpp
connector/devices/: CMakeLists.txt  devicenode.cpp  devices.hpp  devices.i  udevices.cpp  wdevices.cpp
connector/ewf/: CMakeLists.txt  ewf.cpp  ewf.hpp  ewf.i  ewfnode.cpp  ewfnode.hpp
connector/local/: CMakeLists.txt  __init__.py  local.hpp  local.i  ulocal.cpp  ulocalnode.cpp  ulocalnode.hpp  wlocal.cpp  wlocalnode.cpp  wlocalnode.hpp
crypto/: CMakeLists.txt  __init__.py  unxor.py
databases/: CMakeLists.txt  __init__.py
experimental/: fchunks.py  hist.py
export/: CMakeLists.txt  extract.py
fs/: CMakeLists.txt  __init__.py  spare.py
fs/extfs/: BlkList.cpp  CMakeLists.txt  CustomAttrib.cpp  CustomResults.cpp  Directory.cpp  ExtfsNode.cpp  ExtfsRawDataNode.cpp  ExtfsSlackNode.cpp  ExtfsSymLinkNode.cpp  FileNameRecovery.cpp  FsStat.cpp  InodeStat.cpp  InodeUtils.cpp  InodesList.cpp  Journal.cpp  JournalStat.cpp  JournalType.tpp  MfsoAttrib.cpp  Option.cpp  OrphansInodes.cpp  SuperBlockUtils.cpp  SymLink.cpp  extfs.cpp  extfs.hpp  extfs.i  fsck.cpp
fs/extfs/data_structure/: DirEntry.cpp  Ext4Extents.cpp  ExtendedAttr.cpp  GroupDescriptor.cpp  Inode.cpp  InodeAccessors.cpp  InodeStructure.cpp  SuperBlock.cpp  SuperBlockStructure.cpp
fs/extfs/data_structure/extfs_struct/: directory_entry.h  ext_attr_header.h  extended_attr_name_entries.h  extfs_super_block.hpp  first_block.h  group_descr_table.h  hash_tree.h  inodes.h  journal.h  posix_acl.h
fs/extfs/data_structure/includes/: DirEntry.h  Ext4Extents.h  ExtendedAttr.h  GroupDescriptor.h  Inode.h  SuperBlock.h
fs/extfs/data_structure/includes/extfs_struct/: directory_entry.h  group_descr_table.h  inodes.h  journal.h  super_block.h  xtd_attr.h
fs/extfs/data_structure/includes/extfs_struct/ext4/: extents.h
fs/extfs/include/: BlkList.h  CustomAttrib.h  CustomResults.h  Directory.h  ExtfsNode.h  ExtfsRawDataNode.h  ExtfsSlackNode.hpp  ExtfsSymLinkNode.h  FileNameRecovery.h  FsStat.h  InodeStat.h  InodesList.h  Journal.h  JournalStat.h  JournalType.h  MfsoAttrib.h  Option.h  OrphansInodes.h  SymLink.h  fsck.h
fs/extfs/include/utils/: InodeStructure.h  InodeUtils.h  SuperBlockUtils.h  SuperblockStructure.h
fs/fat/: CMakeLists.txt  bootsector.cpp  bootsector.hpp  entries.cpp  entries.hpp  fat.cpp  fat.hpp  fatfs.cpp  fatfs.hpp  fatfs.i  fatnodes.cpp  fatnodes.hpp  fattree.cpp  fattree.hpp
fs/ntfs/: CMakeLists.txt  __init__.py  attribute.cpp  attribute.hpp  attributelist.cpp  attributelist.hpp  bitmap.cpp  bitmap.hpp  bitmapnode.cpp  bitmapnode.hpp  boot.cpp  boot.hpp  bootsector.cpp  bootsector.hpp  common.hpp  data.cpp  data.hpp  datanode.cpp  datanode.hpp  filename.cpp  filename.hpp  indexallocation.cpp  indexallocation.hpp  indexentry.cpp  indexentry.hpp  indexroot.cpp  indexroot.hpp  mftattribute.cpp  mftattribute.hpp  mftattributecontent.cpp  mftattributecontent.hpp  mftattributecontenttype.hpp  mftentry.cpp  mftentry.hpp  mftentryinfo.cpp  mftentryinfo.hpp  mftentrynode.cpp  mftentrynode.hpp  mftfile.cpp  mftfile.hpp  (+22 more)
fs/ntfs/attributes/: attributelist.cpp  attributelist.hpp  bitmap.cpp  bitmap.hpp  data.cpp  data.hpp  filename.cpp  filename.hpp  indexallocation.cpp  indexallocation.hpp  indexentry.cpp  indexroot.cpp  indexroot.hpp  reparsepoint.cpp  reparsepoint.hpp  securitydescriptor.cpp  securitydescriptor.hpp  standardinformation.cpp  standardinformation.hpp
hash/: CMakeLists.txt  __init__.py  hash.py
mailbox/: CMakeLists.txt
mailbox/pff/: CMakeLists.txt  pff.i  pff_common.hpp  pff_info.cpp  pff_macro.hpp  pff_node.hpp  pff_node_email_message.cpp  pff_node_email_transport_headers.cpp  pff_node_folder.cpp  pff_node_unallocated_blocks.cpp
mem/: CMakeLists.txt
mem/volatility/: CMakeLists.txt  volatility.py
mem/volatility/forensics/: CMakeLists.txt  addrspace.py  object2.py
mem/volatility/forensics/win32/: CMakeLists.txt  executable.py  tasks.py
mem/volatility/memory_objects/: CMakeLists.txt
mem/volatility/memory_objects/Windows/: CMakeLists.txt
mem/volatility/memory_plugins/: CMakeLists.txt
metadata/: CMakeLists.txt  __init__.py  structparser.py
metadata/compoundfile/: CMakeLists.txt  compound.py  metacompound.py  mscfb.py  msdoc.py  msdocheader.py  msodraw.py  msoleps.py  msoshared.py  msppt.py  vba.py
metadata/lnk/: CMakeLists.txt  lnk.py  lnkheader.py  lnkitem.py
metadata/metaexif/: CMakeLists.txt  __init__.py  metaexif.py
metadata/pdf/: CMakeLists.txt  metapdf.py
metadata/prefetch/: CMakeLists.txt  prefetch.py
metadata/skindetection/: skindetection.py
node/: CMakeLists.txt  cut.py  merge.py  split.py
phone/: CMakeLists.txt  smsdecode.py
process/: CMakeLists.txt  post_process.py
ram/: CMakeLists.txt  __init__.py
search/: CMakeLists.txt  __init__.py
search/carver/: CMakeLists.txt  __init__.py  carver.cpp  carver.hpp  carver.i  carvergui.py  carverui.py  common.hpp  predef.py  process.py  typeSelection.py  userdef.py  utils.py
search/indexer/: CMakeLists.txt  indexer.cpp  indexer.i
statistics/: CMakeLists.txt  __init__.py  fileschart.py
test/: CMakeLists.txt  gen_nodes.py  huge_node.py
utils/: CMakeLists.txt  __init__.py  man.py
utils/shm/: CMakeLists.txt  __init__.py  shm.cpp  shm.hpp  shm.i  touch.py
viewer/: CMakeLists.txt  __init__.py  cat.py
volumes/: CMakeLists.txt  __init__.py
volumes/partition/: CMakeLists.txt  dos.cpp  dos.hpp  gpt.cpp  gpt.hpp  ipart.hpp  partition.cpp  partition.hpp  partition.i  partnode.cpp  partnode.hpp  parttypes.hpp
(+244 files in other folders)
